# game

./: .gitignore  CMakeLists.txt  README.md  game.sln  imgui.ini  settings.ini
media/models/: building.glb  cube.glb  duck.glb
prototype/: imgui.ini  settings.ini
prototype/media/animations/: animation.ozz  human.ozz  monke.ozz
prototype/media/models/: building.glb  capsule.glb  cylinder.glb  human.glb  monke.glb  monkey.glb
prototype/media/skeletons/: human.ozz  monke.ozz  skeleton.ozz
prototype/modules/native/: armors.json  atmosphere.json  buildings.json  buildings.xml  colors.json  colors.xml  creatures.json  foliage.json  fortifications.json  palette.json  resources.json  vegetation.json  weapons.json  worldgen.json  worldgen.xml
prototype/shaders/: billboard.frag  billboard.vert  blur.comp  clouds.comp  copy.comp  creature.vert  debug.frag  debug.vert  depthmap.frag  depthmap.vert  font.frag  font.vert  label.frag  label.vert  object.frag  object.vert  ocean.frag  ocean.tesc  ocean.tese  perlinworley.comp  postproc.frag  postproc.vert  skeleton.frag  skeleton.vert  skybox.frag  skybox.vert  terrain.frag  terrain.tesc  tree.frag  tree.vert  weather.comp  worldmap.frag  worldmap.tesc  worldmap.vert  worley.comp
prototype/shaders/battle/: grass.frag  grass.vert  terrain.frag  terrain.tesc  terrain.tese  trees.frag  water.frag  (+2 more)
shaders/: debug.frag  debug.vert  object.vert  skybox.frag  skybox.vert
src/: army.cpp  army.h  atlas.cpp  atlas.h  battle.cpp  battle.h  campaign.cpp  campaign.h  creature.cpp  creature.h  crowd.cpp  crowd.h  debugger.cpp  debugger.h  eroder.cpp  eroder.h  landscape.cpp  landscape.h  main.cpp  mapfield.cpp  mapfield.h  media.cpp  media.h  module.cpp  module.h  object.h  save.cpp  save.h  sitegen.cpp  sitegen.h  terra.cpp  terra.h  terragen.cpp  terrain.cpp  terrain.h  tree.cpp  tree.h  worldgen.cpp  worldgen.h  worldgraph.cpp  (+3 more)
src/core/: animation.cpp  animation.h  buffers.cpp  buffers.h  camera.cpp  camera.h  entity.h  geom.cpp  geom.h  image.cpp  image.h  input.cpp  input.h  logger.cpp  logger.h  media.cpp  media.h  mesh.cpp  mesh.h  model.cpp  model.h  navigation.cpp  navigation.h  physics.cpp  physics.h  poisson.cpp  poisson.h  render.cpp  render.h  resource.cpp  resource.h  shader.cpp  shader.h  shadow.cpp  shadow.h  sky.cpp  sky.h  sound.cpp  sound.h  text.h  (+8 more)
src/geography/: atlas.cpp  atlas.h  landscape.cpp  landscape.h  mapfield.cpp  mapfield.h  sitegen.cpp  sitegen.h  terragen.cpp  terragen.h  worldgraph.cpp  worldgraph.h
src/geometry/: geom.h  voronoi.cpp  voronoi.h
src/graphics/: clouds.cpp  clouds.h  forest.cpp  forest.h  label.cpp  label.h  mesh.cpp  mesh.h  model.cpp  model.h  render.cpp  render.h  shader.cpp  shader.h  shadow.cpp  shadow.h  sky.cpp  sky.h  terrain.cpp  terrain.h  text.cpp  text.h  texture.cpp  texture.h  worldmap.cpp  worldmap.h
src/module/: module.cpp  module.h
src/physics/: bumper.cpp  bumper.h  heightfield.cpp  heightfield.h  physics.cpp  physics.h  ragdoll.cpp  ragdoll.h
src/util/: animation.cpp  animation.h  camera.cpp  camera.h  geom.cpp  geom.h  image.cpp  image.h  input.cpp  input.h  navigation.cpp  navigation.h  serialize.h  timer.cpp  timer.h  voronoi.cpp  voronoi.h  window.cpp  window.h
(+88 files in other folders)
